# libuv-sys-lite

./: Cargo.toml  LICENSE  LICENSE-libuv  README.md  build.rs
.github/workflows/: ci.yml
crate/: Cargo.toml
crate/scripts/: generate.ts
crate/src/: lib.rs
scripts/: deno.jsonc  gen.ts  generate.ts  util.ts
src/: functions.rs  lib.rs
tests/libuv-dylib/: Cargo.toml
tests/libuv-dylib/src/: lib.rs
tests/test-host-libuv/: Cargo.toml  bad.txt  build.rs  generate_symbols_lists.js  generated_symbol_exports_list_linux.def  generated_symbol_exports_list_macos.def  generated_symbol_exports_list_windows.def
tests/test-host-libuv/src/: lib.rs
tests/test-system-libuv/: Cargo.toml  build.rs
tests/test-system-libuv/src/: lib.rs
